source/css/custom.css
img {
  max-width: 100%;
  animation: transitionPlay 1.1s;

}

.center {
  text-align: center;
}

.left {
  margin-left: 0;
}

.lit {
  font-size: 1.5rem;
  font-weight: 300;
}

.little-svg {
  fill: #fff;
}

.ml-0 {
  margin-left: 1rem;
}

.ml {
  margin-left: 2rem;
}

.ml-1 {
  margin-left: 4.5rem;
}

.bottom {
  margin-block-start: 0px;
  margin-block-end: 0px;
  margin-bottom: 0px;
}

.mb-1 {
  margin-bottom: 0px;
}

.mb-2 {
  margin-bottom: 5px;
}

.mb-3 {
  margin-bottom: 20px;
}

.mr {
  margin-right: 32px;
}

.mt-0 {
  margin-top: 0px;
}

.mt-2 {
  margin-top: 3rem;
}

.mt-3 {
  margin-top: 4rem;
}

.mx-auto {
  margin: auto;
}

.mode {
  position: absolute;
  display: block;
  cursor: pointer;
}

.text-center {
  text-align: center;
}

.text-right {
  text-align: right;
}

.tag-link {
  margin-right: 10px;
}

.about {
  width: 150px;
  height: 150px;
  border-radius: 50%
}

/* blockquote */
blockquote {
  font-family: 'Inter';
  background-color: rgba(148, 148, 149, 0.08) ;
  margin: 1.5em 0px;
  padding: 1.1em 20px 1px 20px;
  font-style: italic;
}

blockquote footer {
  font-family: 'Inter';
  font-size: 16px;
  padding-bottom: 10px;
  margin-top: -10px;
}

blockquote footer cite:before {
  content: "—";
  padding: 0 0.5em;
}

/* Scroll bar */
::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

::-webkit-scrollbar-track {
  -webkit-border-radius: 8px;
  border-radius: 8px;
}

::-webkit-scrollbar-thumb {
  -webkit-border-radius: 8px;
  border-radius: 8px;
  background: rgb(128 128 128 / 80%);
}
::-webkit-scrollbar-thumb:window-inactive {
  background: rgb(128 128 128 / 20%);
}

/* Footer */
a.footer-link:hover,
a.footer-link:focus {
  cursor: pointer;
}

.svg-hov {
  transition: all .2s ease-in-out;
}
.svg-hov:hover {
  transform: translateY(-3px);
  transition: all .2s ease-in-out;

}

.github {
  fill: #63636F;
}
.linkedin {
  fill: #0073b1;
}
.twitter {
  fill: #1DA1F2;
}
.instagram {
  fill: #E4405F
}

body {
  transition: all 0.3s ease-in-out;
}

.trans {
  animation: transitionPlay 0.7s;
}


@keyframes transitionPlay {
  from {
    opacity: 0;
    transform: translateY(20px);
  }

  to {
    opacity: 1;
    transform: none;
  }
}

.hidden {
  display: none;
}

.posisi {
  text-align: center;
}



@media (min-width: 550px) {
  .posisi {
    text-align: right;
  }


}

